--- a/src/main/resources/templates/error/handled-by-controller-advice.html
+++ b/src/main/resources/templates/error/handled-by-controller-advice.html
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="Shift_JIS"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org" xml:lang="ja" lang="ja">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Hello</title>
+<title>Error was handled by Controller Advice</title>
 </head>
 <body>
-	<h1>Hello</h1>
-	<p th:text="${message}">Hello World!</p>
+	<h1>Error was handled by Controller Advice</h1>
 </body>
 </html>
