INSERTオペレーションのサンプルを追加

--- a/src/main/resources/templates/mybatis/index.html
+++ b/src/main/resources/templates/mybatis/index.html
@@ -12,6 +12,8 @@
 		<dd>MyBatisのマッパーを通じて単一レコードを取得して画面表示する例.</dd>
 		<dt><a href="actors">Actors</a></dt>
 		<dd>MyBatisのマッパーを通じて複数レコードを取得して画面表示する例.</dd>
+		<dt><a href="input">Input, Register and Cancel</a></dt>
+		<dd>MyBatisのマッパーを通じてレコードを登録する例.</dd>
 	</dl>
 </body>
 </html>
